framec_tests/language_specific/rust/v3_facade_smoke/negative/strict_multi_errors.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $B();
                let v: Vec<i32 = vec![1,2]; // missing '>'
                let z = ;                    // missing initializer
            }
        }
        $B {
        }
}

